# AxonMQ

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  build.rs  config.toml  sparkplug_b.proto
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/docker/: Dockerfile_debian  Dockerfile_rockylinux  Dockerfile_ubuntu
.github/package/: axonmq.service  postinst  prerm
.github/workflows/: build_images.yml  centos.yml  ci.yml  debian.yml  image_debian.yml  image_ubuntu.yml  macos.yml  release.yml  release_centos.yml  release_debian.yml  release_ubuntu.yml  rockylinux.yml  ubuntu.yml  windows.yml
certs/: server.crt  server.key
docs/: cli-usage.md  http-api.md  processor-native.md  processor-wasm.md  processor.md  router.md  templating-guide.md  test_cases.md
docs/processor/: anomaly_detector.md  filter.md  json_transform.md  republish.md  webhook.md
docs/sparkplugb/: architecture.md  overview.md
src/: main.rs
src/cli/: client.rs  commands.rs  main.rs  spb.rs
src/config/: chain.rs  mod.rs  processor.rs  router.rs
src/error/: mod.rs
src/message/: mod.rs
src/mqtt/: code.rs  command.rs  error.rs  helper.rs  listener.rs  mod.rs  retain_trie.rs  server.rs  stack.rs  utils.rs
src/mqtt/listener/: mod.rs  shared.rs  store.rs  tcp.rs  ws.rs
src/mqtt/protocol/: codec.rs  conn.rs  fixed.rs  message.rs  mod.rs  property.rs  publish.rs  subscribe.rs  will.rs
src/operator/: chain.rs  client.rs  command.rs  error.rs  filter.rs  helper.rs  matcher.rs  mod.rs  retain_trie.rs  router.rs  trie.rs  utils.rs
src/operator/sink/: local.rs  mod.rs
src/processor/: config.rs  error.rs  message.rs  mod.rs  wasm.rs
src/processor/processors/: anomaly_detector.rs  filter.rs  json_transform.rs  logger.rs  mod.rs  republish.rs  webhook.rs
src/service/: mod.rs
src/service/restful/: error.rs  mod.rs  rejection.rs  spb.rs
src/service/sparkplug_b/: cmd.rs  error.rs  helper.rs  in_helper.rs  message.rs  mod.rs  proto.rs  utils.rs
src/service/sparkplug_b/model/: device.rs  group.rs  metric.rs  mod.rs  node.rs  template.rs  value.rs
src/utils/: mod.rs  time.rs
wasm/: example.wasm
wit/: processor.wit
