[package]
name = "axonmq"
version = "0.1.0"
edition = "2024"
authors = ["le7.toille@gmail.com"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
coarsetime = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

thiserror = "2"
async-trait = "0.1"
bytes = "1"
byteorder = "1"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }


tonic = "*"
prost = "0.13"
rand = "0.9.2"

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[package.metadata.deb]
maintainer = "le.toille <le7.toille@gmail.com>"
copyright = "2025, le.toille <le7.toille@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """A high-performance MQTT broker."""
revision = "1"
assets = [
    [
        "target/release/axonmq",
        "usr/bin/",
        "755",
    ],
    [
        "config.toml",
        "etc/axonmq/",
        "644",
    ],
    [
        ".github/package/axonmq.service",
        "lib/systemd/system/",
        "644",
    ],
]
maintainer-scripts = ".github/package/"
conf-files = ["/etc/axonmq/config.toml"]
